# chimera

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  chimera.yaml  e2e_config.yaml  e2e_correlations.json  e2e_data.csv  e2e_model_metadata.json  e2e_results.json  generate_sample_data.py  pyproject.toml  requirements.txt  tmp_cli_auth.csv  tmp_lanl_auth.txt  tmp_lanl_auth_large.txt  tmp_large_auth.csv  val_model_metadata.json  val_results.json  validate_release.py  validation.csv  verify_e2e.py
chimera/: __init__.py  agent.py  alerts.py  api.py  cases.py  cli.py  config.py  contracts.py  correlator.py  crypto.py  data_loader.py  exporters.py  feature_engineering.py  feedback.py  fleet_monitor.py  identity.py  model.py  registry.py  reporting.py  scoring.py  suppression.py  threat_intel.py  triage.py  ux.py
docs/: Architecture_Overview.md  CLI_and_Outputs.md  Chimera_Research_Brief.md  Embedding_Chimera.md  Evaluation_Playbook.md  First-Principles Blueprint for the Chimera's Global Ascendancy.md  Install_and_Smoke_Test.md  Output_Schemas.md  Repo_Transplant_Shortlist.md  Research_System_Map.md
e2e_exports/: chimera.cef  chimera.stix.json  chimera.syslog
e2e_reports/: chimera_events.csv  chimera_report.json  chimera_report.md  chimera_users.csv
scripts/: generate_research_auth_dataset.py  package_smoke_test.py  run_lanl_benchmark.py  smoke_test_portable_runtime.py
tests/: __init__.py  test_adversarial.py  test_agent.py  test_cases.py  test_config.py  test_correlator.py  test_data_loader.py  test_detectors.py  test_engine.py  test_exporters.py  test_feature_engineering.py  test_identity.py  test_model.py  test_portable_runtime.py  test_randomness.py  test_robustness.py  test_rules.py  test_rust_graph.py  test_security.py  test_threat_intel.py
tmp_bench_hijack_after_transplant/: bench_report.json
tmp_bench_hijack_concurrency/: bench_report.json
tmp_bench_hijack_geo/: bench_report.json
tmp_bench_hijack_verify/: bench_report.json
tmp_bench_large_output/: bench_report.json
tmp_bench_mfa_output/: bench_report.json
tmp_bench_native_mfa_output/: bench_report.json
tmp_bench_native_output/: bench_report.json
tmp_bench_output/: bench_report.json
tmp_bench_release_prep/: bench_report.json  bench_report.md
tmp_bench_release_spray/: bench_report.json  bench_report.md
tmp_bench_release_spray2/: bench_report.json  bench_report.md
tmp_bench_spray_output/: bench_report.json
tmp_lanl_release_prep/: lanl_benchmark_config.json  lanl_suite_report.md  lanl_suite_summary.json
(+43 files in other folders)
